[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/characther_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/Player/PickupZone.gd" type="Script" id=3]
[ext_resource path="res://scripts/Player/HhtEngine.gd" type="Script" id=4]
[ext_resource path="res://assets/character_shadow.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.99999
height = 2.66669

[sub_resource type="Animation" id=2]
resource_name = "IdleDown"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=6]
resource_name = "RunDown"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunUp"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachine" id=22]
states/Idle/node = SubResource( 14 )
states/Idle/position = Vector2( 262, 111 )
states/Run/node = SubResource( 19 )
states/Run/position = Vector2( 425, 111 )
transitions = [ "Idle", "Run", SubResource( 20 ), "Run", "Idle", SubResource( 21 ) ]
start_node = "Idle"
graph_offset = Vector2( -76, -28 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="CircleShape2D" id=24]
radius = 26.6667

[node name="Player" type="KinematicBody2D"]
collision_mask = 2147483650
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -4.66667 )
current = true
zoom = Vector2( 2, 2 )
smoothing_speed = 15.0

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16, -48 )
texture = ExtResource( 1 )
centered = false
hframes = 6
vframes = 4
region_rect = Rect2( 0, 256, 64, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 2 )
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/IdleUp = SubResource( 5 )
anims/RunDown = SubResource( 6 )
anims/RunLeft = SubResource( 7 )
anims/RunRight = SubResource( 8 )
anims/RunUp = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 23 )
parameters/Idle/blend_position = Vector2( 0, 0.1 )
parameters/Run/blend_position = Vector2( 0, 0.1 )

[node name="HhtEngine" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="HungerTimer" type="Timer" parent="HhtEngine"]
autostart = true

[node name="ThirstTimer" type="Timer" parent="HhtEngine"]
autostart = true

[node name="HealthTimer" type="Timer" parent="HhtEngine"]
wait_time = 5.0
autostart = true

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483652
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
shape = SubResource( 24 )

[connection signal="timeout" from="HhtEngine/HungerTimer" to="HhtEngine" method="_on_HungerTimer_timeout"]
[connection signal="timeout" from="HhtEngine/ThirstTimer" to="HhtEngine" method="_on_ThirstTimer_timeout"]
[connection signal="timeout" from="HhtEngine/HealthTimer" to="HhtEngine" method="_on_HealthTimer_timeout"]
[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
